mesh/flask2.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaskapi-deployment2
  labels:
    app: blacklist
    app.kubernetes.io/name: python
    app.kubernetes.io/part-of: thehitlist
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blacklist
  template:
    metadata:
      labels:
        app: blacklist
        version: v2
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: blacklist
          image: quay.io/gary_crowe/flask
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
---
