mesh/svc-flask.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: blacklist
  name: svc-flask
spec:
  ports:
    - name: http-5000
      port: 5000
      targetPort: 5000
  selector:
    app: blacklist
