mesh/svc-mysql.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: database
spec:
#  type: ClusterIP
  ports:
  - port: 3306
    protocol: TCP
    name: mysql
  selector:
    app: database
