mesh/ingress_mirror.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: blacklist
  namespace: istio-system
spec:
  host: blacklist.${APP_SUBDOMAIN}
  port:
    targetPort: http2
  to:
    kind: Service
    name: istio-ingressgateway
    weight: 100
  wildcardPolicy: None
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: blacklist-gw
  namespace: ${NAMESPACE}
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - blacklist.${APP_SUBDOMAIN}
    port:
      name: http2
      number: 80
      protocol: HTTP2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: blacklist
  namespace: ${NAMESPACE}
spec:
  gateways:
  - blacklist-gw
  hosts:
  - blacklist.${APP_SUBDOMAIN}
  http:
  - route:
    - destination:
        host: svc-flask
        subset: version-v1
      weight: 100
    mirror:
      host: svc-flask
      subset: version-v2
      mirror_percent: 50
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: blacklist
  namespace: ${NAMESPACE}
spec:
  host: blacklist
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - labels:
      version: v1
    name: version-v1
  - labels:
      version: v2
    name: version-v2
---
